particle edit mode makes blender crash #68675

Closed
opened 2019-08-15 06:21:13 +02:00 by Massimiliano Puliero · 6 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70

Blender Version
Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-14 22:18, hash: cb7ead2e3b
Worked: 2.8

Short description of error
brush hair particle system make blender crash.

Exact steps for others to reproduce the error
open the attached file and try to brush the hairs.

thank you

hair_crash.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70 **Blender Version** Broken: version: 2.81 (sub 2), branch: master, commit date: 2019-08-14 22:18, hash: `cb7ead2e3b` Worked: 2.8 **Short description of error** brush hair particle system make blender crash. **Exact steps for others to reproduce the error** open the attached file and try to brush the hairs. thank you [hair_crash.blend](https://archive.blender.org/developer/F7665384/hair_crash.blend)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed. Wasnt happening yesterday, bisecting...

Confirmed. Wasnt happening yesterday, bisecting...

This issue was referenced by ff1ea600c9

This issue was referenced by ff1ea600c98ba542c3b950fcfaf350626e078899
Clément Foucault was assigned by Philipp Oeser 2019-08-15 11:43:03 +02:00
Member

caused by 9c010c44f4, D5488: Fix #68675: particle edit mode makes blender crash might already be enough...
Since this is related to DRW_draw_depth_object, I assume this might cause other stuff to crash than just particle edit?, will set to High prio...

caused by 9c010c44f4, [D5488: Fix #68675: particle edit mode makes blender crash](https://archive.blender.org/developer/D5488) might already be enough... Since this is related to `DRW_draw_depth_object`, I assume this might cause other stuff to crash than just particle edit?, will set to `High` prio...
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68675
No description provided.